--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,34 @@
-html, body, ul, li {
-    margin: 0px;
-    padding: 0px;
+html,
+body,
+ul,
+li {
+  margin: 0px;
+  padding: 0px;
 }
 
 #gallery {
-    width: 720px;
-    margin: 20px auto;
-    text-align: center;
+  width: 512px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+#gallery .photos {
+  position: relative;
+  height: 512px;
 }
 
 #gallery .photos img {
-    width: 50%;
-    display: none;
-}
-
-#gallery .photos img:first-child {
-    display: inline-block;
+  width: 100%;
+  position: absolute;
+  left: 0px;
+  opacity: 0;
+  transition: opacity 1.5s;
 }
 
 #gallery .buttons {
-    margin-top: 20px;
+  margin-top: 20px;
+}
+
+#gallery .photos img.showed {
+  opacity: 1;
 }
