v 2.0 - added auto movements slides (setTimeout) - added new buttons stop and play - added new slides

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@ li {
   position: absolute;
   left: 0px;
   opacity: 0;
-  transition: opacity 1.5s;
+  /* transition effect, seconds */
+  transition: opacity 1s;
 }
 
 #gallery .buttons {
